--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
             
         run: |
           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-          ssh -o StrictHostKeyChecking=no -i private_key ubuntu@tindware.duckdns.org '
+          ssh -o StrictHostKeyChecking=no -i private_key -p 4522 ubuntu@tindware.duckdns.org '
           
             cd /var/www/bootstrap-tindware
             git pull'
