--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,5 @@ jobs:
           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
           ssh -o StrictHostKeyChecking=no -i private_key -p 4522 ubuntu@tindware.duckdns.org '
           
-            sudo -i
-            cd /var/www/bootstrap-tindware
-            git config --global --add safe.directory /var/www/bootstrap-tindware
-            git pull'
+            sudo /root/sync.sh
           '
